# 10predict

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/agents/: persona_types.py
backend/app/api/: dashboard.py  health.py  predictions.py  research.py  router.py  signals.py
backend/app/graph/: schema.py  storage.py
backend/app/models/: __init__.py  accuracy.py  article.py  chain.py  prediction.py  simulation.py  stock_cache.py  trend.py
backend/app/scheduler/: scheduler.py
backend/app/schemas/: dashboard.py  prediction.py
backend/app/services/: accuracy_tracker.py  chain_analyzer.py  data_collector.py  news_fetcher.py  prediction_engine.py  reddit_fetcher.py  report_agent.py  research_cycle.py  simulation_runner.py  ticker_validator.py  trend_clusterer.py
backend/app/utils/: rate_limiter.py
backend/tests/: conftest.py
frontend/: index.html  package.json  tailwind.config.js
frontend/src/: App.vue
frontend/src/api/: client.ts
frontend/src/components/: ChainDepthIndicator.vue  ConfidenceMeter.vue  SignalBadge.vue
frontend/src/router/: index.ts
frontend/src/types/: index.ts
frontend/src/views/: DashboardView.vue  PredictionDetailView.vue  PredictionsView.vue  ResearchView.vue
scripts/: run_manual_cycle.py
